- fix chosen on new subform rows

= 3.4.22
- fix has_one/many tableless model through association
- fix check default value for checkboxes, so if record in subform, with checkbox, is left as default, is not saved, but setting checkbox would save record
- singular associations on subform are not always created, so you can leave default values on fields and skip creation, in other case some validations could fail and force to create singular associations
- fix counter cache on polymorphic for rails 4.2.1
- fix set cursor at end when focusing first element of form

= 3.4.21.1
- Fix field_search when contains is used on rails 4.2

= 3.4.21
- Fix excluding a bridge
- Allow to call helpers from dynamic_parameters proc
- Fix warn when form is changed on create/update loaded on page (without AJAX)
- Fix XSS vulnerability when using to_label with as_ (#425)
- Set cursor at end when focus first element
- Set focus on form.search after search with refresh_with_header

= 3.4.20
- Update tinymce bridge for tinyMCE 4.x
- Ignore :format in conditions_from_params
- column with :radio form_ui works like :select form_ui in list and show
- Fix default opt_value in search_range when comparator options is overrided
- translate include_blank in select search_ui
- Add column.css_class to li tag on field search
- Allow to set having in custom_finder_options

= 3.4.19
- Fix rails bug on set_inverse_instance for has_one :through associations which has_many inverse association
- Fix warn when form is changed

= 3.4.18.1
- Fix do_destroy for mark action

= 3.4.18
- Fix paper_trail bridge on development
- Allow to set :data hash in :html_options for action links
- unscope(:order) in calculate_query (for rails >= 4)
- clean code and follow ruby style guide
- deny_access (rescue method for ActiveScaffold::RecordNotAllowed, ActiveScaffold::ActionNotAllowed) render with status :forbidden (403) instead of 401