@@ -149,8 +149,12 @@ text-align: left;
 }
 
 .active-scaffold th a,
-.active-scaffold th p {
+.active-scaffold th p,
+.active-scaffold .show-view th {
 font: bold 11px arial, sans-serif;
+}
+.active-scaffold th a,
+.active-scaffold th p {
 display: block;
 }
 
@@ -158,7 +162,8 @@ display: block;
 padding: 2px 2px 2px 5px;
 }
 
-.active-scaffold th p {
+.active-scaffold th p,
+.active-scaffold .show-view th {
 padding: 2px 5px;
 }
 
@@ -183,8 +188,11 @@ display: none;
 /* Table :: Record Rows
    ============================= */
 
-.active-scaffold tr.record td {
+.active-scaffold tr.record td,
+.active-scaffold .show-view td {
 padding: 5px 4px;
+}
+.active-scaffold tr.record td {
 font-family: Verdana, sans-serif;
 font-size: 11px;
 border: solid 1px;
@@ -555,6 +563,16 @@ margin-left: 5px;
 }
 .active-scaffold .show-view dl dl {
 margin-left: 0px;
+margin-top: 5px;
+}
+.active-scaffold .show-view dl dl:first-child {
+margin-top: 0;
+}
+.active-scaffold .show-view dl dl:after {
+display: block;
+content: "";
+height: 1px;
+clear: both;
 }
 
 .active-scaffold .show-view dt {
