@@ -1,6 +1,6 @@
 <h4><%= active_scaffold_config.show.label(@record.to_label.nil? ? nil : h(@record.to_label)) %></h4>
 
-<%= render :partial => 'show_columns', :locals => {:columns => active_scaffold_config.show.columns} -%>
+<%= render :partial => 'show_columns', :locals => {:columns => active_scaffold_config.show.columns, :record => @record} -%>
 
 <p class="form-footer">
   <%= link_to as_(:close), main_path_to_return, :class => 'as_cancel', :remote => request.xhr? %>
