@@ -1,4 +1,6 @@
 - fix chosen on new subform rows
+- add show_ui to column
+- add :vertical and :horizontal show_ui for associations
 
 = 3.4.22
 - fix has_one/many tableless model through association
